--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@boltui/add-to-trolley": "^2.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "d3": "^5.16.0",
     "react": "^16.13.1",
+    "react-csv-to-table": "^0.0.4",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-papaparse": "^3.2.1",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
