--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://rachelnewman.github.io/findability-leaderboard/",
   "name": "findability-leaderboard",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "d3": "^5.16.0",
+    "gh-pages": "^3.0.0",
     "react": "^16.13.1",
     "react-csv-to-table": "^0.0.4",
     "react-dom": "^16.13.1",
@@ -19,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"predeploy": "yarn build",
+		"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
